Test/dafny4/git-issue53.dfy.expect
git-issue53.dfy(5,11): Error: Undeclared top-level type or type parameter: mode (did you forget to qualify a name or declare a module import 'opened'?)
1 resolution/type errors detected in git-issue53.dfy
